src/test/ui/issue-32323.stderr
error[E0308]: mismatched types
  --> $DIR/issue-32323.rs:15:49
   |
LL | pub fn f<'a, T: Tr<'a>>() -> <T as Tr<'a>>::Out {}
   |                                                 ^^ expected associated type, found ()
   |
   = note: expected type `<T as Tr<'a>>::Out`
              found type `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
